tests/errors/template-unsatisifed.flbgst
t : Template { x : y + 2  y ?: }
value : (t { }).x Is Int
